--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,9 +3,13 @@
 
 .Header {
     height: $headerHeight;
-    background: $primaryColor;
-    color: #fff;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    input {
+        width: 64%;
+        border: 1px solid #e9e9e9;
+        padding: 6px;
+        border-radius: 4px;
+    }
 }
