--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -4,13 +4,18 @@
 .Navigation {
     display: flex;
     height: $NavigationHeight;
-    background: $primaryColor;
     color: #fff;
+    box-shadow: 0px 0px 20px 0px #d0d0d0;
+    z-index: 1;
     a {
         flex: 1;
-        border-right: 1px solid #ffffff;
+        text-decoration: none;
+        color: $fontSecondaryColor;
         &:last-child {
             border: none;
+        }
+        &.active {
+            color: $primaryColor;
         }
     }
 }
