--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -10,7 +10,10 @@
     a {
         flex: 1;
         text-decoration: none;
-        color: $fontSecondaryColor;
+        color: $fontSecondaryColor;display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         &:last-child {
             border: none;
         }
