--- a/src/components/ProductCard.scss
+++ b/src/components/ProductCard.scss
@@ -1,34 +1,36 @@
 @import "../theme.scss";
 
-.storeCard {
+.productCard {
     border-radius: 4px;
     overflow: hidden;
-    margin: 0 1.5em 1.5em 1.5em;
     text-align: left;
     box-shadow: 0px 0px 2px 0px #d0d0d0;
-    .storeImage {
+
+    &:hover, &:focus {
+        border: 1px solid $primaryColor; 
+    }
+
+    .productImage {
         height: 10em;
         background: #d0d0d0;
     }
     .detail {
         background: #ffffff;
-        padding: 1em;
+        padding: 0.7em;
         > div {
             margin-bottom: 5px;
         }
-        .storeName {
-            font-weight: 600;
-            font-size: 1.1em;
+        .productName {
+            font-weight: bold;
         }
-        .storeType {
+        .productType {
+            margin-bottom: 10px;
             color: $fontSecondaryColor;
-            font-size: 0.95em;
+            font-size: 0.9em;
         }
-        .storeName {
-            
-        }
-        .storeName {
-            
+        .productPrice {
+            font-weight: 600;
+            font-size: 0.9em;
         }
         .actions {
             margin-bottom: 0px;
