--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -4,6 +4,25 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    .mapsFloat {
+        margin: 0 auto;
+        position: absolute;
+        left: 39%;
+        right: 0;
+        bottom: 8vh;
+        padding: 0 0.8em;
+        height: 2.2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4em;
+        background: #ffffff;
+        box-shadow: 0px 0px 4px 0px #d0d0d0;
+        z-index: 2;
+        .icon {
+            margin-right: 5px;
+        }
+    }
 }
 
 .tabs {
@@ -13,7 +32,7 @@
     a {
         padding: 10px 0;
         margin: 0 10px;
-        color: $fontPrimaryColor;
+        color: $fontSecondaryColor;
         font-weight: 500;
         text-decoration: none;
         &.active {
@@ -28,8 +47,9 @@
     background: #f4f4f4;
     overflow-y: auto;
     .heading {
-        padding: 0 1em 1em;
+        padding: 0.5em 1.5em 1em;
         font-weight: bold;
         text-align: left;
+        font-size: 1.1em;
     }
 }
