--- a/src/components/StoreFilter.scss
+++ b/src/components/StoreFilter.scss
@@ -4,7 +4,7 @@
     margin-top: 0.8em;
     padding: 0 2em 0.8em 1em;
     .pill {
-        padding: 0 1em;
+        padding-left: 1em;
         border: 1px solid #dcdcdc;
         white-space: nowrap;
         border-radius: 4px;
@@ -12,8 +12,15 @@
         display: flex;
         height: 2.5em;
         align-items: center;
-        .icon {
+        &:first-child {
+            padding-left: 0.5em;
+            padding-right: 1em;
+        }
+        >i.icon {
             margin-right: 0.4em;
+        }
+        .btn {
+            margin-left: 5px;
         }
     }
 }
