--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -5,7 +5,8 @@
     background: #dad7d8;
     border: none;
     border-radius: 4px;
-
+    font-size: 1.1em;
+    font-weight: 600;
     &.icon {
         height: 30px;
         width: 30px;
