icons + filter remove added

--- a/src/views/StoreDetail.scss
+++ b/src/views/StoreDetail.scss
@@ -76,6 +76,7 @@
                 height: 1.8em;
                 font-weight: 600;
                 font-size: 0.9em;
+                i{margin-left: 0.5em;}
             }
         }
     }
