--- a/src/components/Icon.scss
+++ b/src/components/Icon.scss
@@ -1,13 +1,13 @@
 @import "../theme.scss";
 
-.icon {
-    background-image: url();
+i.icon {
+    background-image: url(../image/icons.png);
     background-size: 100%;
     width: 20px;
     height: 20px;
     display: inline-block;
     &.mini{
-        background-size: 70%;
+        background-size: 100%;
         width: 16px;
         height: 16px;
     }
