--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -71,8 +71,9 @@
             align-items: center;
             height: 2.5em;
             padding-left: 1em;
+            padding-right: 0.5em;
             .icon {
-                margin-left: 1em;
+                margin-left: 0.5em;
             }
         }
         &.open {
