--- a/src/views/ScreenQR.scss
+++ b/src/views/ScreenQR.scss
@@ -11,20 +11,24 @@
     }
 
     .overlay {
-        background: transparent;
         position: absolute;
-        width: 72vw;
-        height: 42vh;
-        top: 0;
         left: 0;
-        border-color: #00000047;
-        border-width: 16vh 14vw 42vh 14vw;
-        border-style: solid;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #00000066;
+        mix-blend-mode: hard-light;   
         > div {
+            width: 70vw;
+            height: 42vh;
+            margin: auto;
+            background-color: gray;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 14vh;
             border: 2px solid #ffffff;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
+            border-radius: 1.5em;
         }
         &.success > div {
             border: 2px solid #0dd200;
