--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -6,10 +6,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 0 0.5em;
     input {
         width: 70%;
         border: 1px solid #e9e9e9;
         padding: 6px;
         border-radius: 4px;
+        font-size: 1.07em;
+        height: 1.3em;
     }
 }
