notification toaster added

--- a/src/views/Checkout.scss
+++ b/src/views/Checkout.scss
@@ -91,7 +91,7 @@
     }
     
     &.discount {
-        background: #44a058 !important;
+        background: $greenColor !important;
         color: #ffffff;
         padding: 1em;
         font-size: 1.1em;
