--- a/src/components/StoreCard.scss
+++ b/src/components/StoreCard.scss
@@ -31,7 +31,11 @@
             
         }
         .actions {
+            display: flex;
             margin-bottom: 0px;
+            .btn:first-child {
+                margin-right: 0.5em;
+            }
         }
     }
 }
