--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -12,6 +12,9 @@
         width: 30px;
         border-radius: 15px;
         padding: 0;
+        align-items: center;
+        display: flex;
+        justify-content: center;
     }
 
     &.transparent {
