--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -10,10 +10,14 @@
     a {
         flex: 1;
         text-decoration: none;
-        color: $fontSecondaryColor;display: flex;
+        color: $fontSecondaryColor;
+        display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
+        svg {
+            margin-bottom: 0.2em;
+        }
         &:last-child {
             border: none;
         }
