--- a/src/components/StoreFilter.scss
+++ b/src/components/StoreFilter.scss
@@ -12,15 +12,13 @@
         display: flex;
         height: 2.5em;
         align-items: center;
+        padding-right: 0.1em;
         &:first-child {
-            padding-left: 0.5em;
+            padding-left: 0.8em;
             padding-right: 1em;
         }
-        >i.icon {
-            margin-right: 0.4em;
-        }
-        .btn {
-            margin-left: 5px;
+        > svg {
+            margin-right: 0.5em;
         }
     }
 }
