--- a/src/views/ScreenQR.scss
+++ b/src/views/ScreenQR.scss
@@ -8,6 +8,9 @@
         top: 0.6em;
         background: #ffffff;
         z-index: 1;
+        height: 2.2em;
+        width: 2.2em;
+        border-radius: 2em;
     }
 
     .overlay {
