--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -15,6 +15,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        font-size: 0.9em;;
         svg {
             margin-bottom: 0.2em;
         }
