--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -19,6 +19,7 @@
         background: #ffffff;
         box-shadow: 0px 0px 4px 0px #d0d0d0;
         z-index: 2;
+        font-weight: 500;
         .icon {
             margin-right: 5px;
         }
