--- a/src/views/Checkout.scss
+++ b/src/views/Checkout.scss
@@ -88,6 +88,11 @@
                 border-top: 1px solid #ebebeb;
             }
         }
+        .delivery, .discount {
+            .value {
+                color: $greenColor;
+            }
+        }
     }
     
     &.discount {
