stoer detail API integrated

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -16,6 +16,9 @@
         display: flex;
         justify-content: center;
     }
+    svg {
+        color: $fontSecondaryColor;
+    }
 
     &.transparent {
         background: transparent;
