--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -67,6 +67,7 @@
         border-radius: 7px;
         transition: all 0.3s ease-in-out;
         padding: 0.5em 0;
+        z-index: 1;
         .filter {
             font-size: 1.1em;
             display: flex;
