--- a/src/components/StoreCard.scss
+++ b/src/components/StoreCard.scss
@@ -8,7 +8,6 @@
     box-shadow: 0px 0px 2px 0px #d0d0d0;
     .storeImage {
         height: 10em;
-        background: #d0d0d0;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -29,8 +28,20 @@
         .rating {
             svg {margin-right: 0.2em;}
         }
-        .storeName {
-            
+        .indicators {
+            display: flex;
+            > div {
+                border: 1px solid #dcdcdc;
+                padding: 0 0.7em 0 0.8em;
+                border-radius: 10px;
+                margin-right: 1em;
+                display: flex;
+                align-items: center;
+                height: 1.8em;
+                font-weight: 600;
+                font-size: 0.82em;
+                svg{margin-left: 0.5em;}
+            }
         }
         .actions {
             display: flex;
