--- a/src/views/ProductDetail.scss
+++ b/src/views/ProductDetail.scss
@@ -111,8 +111,9 @@
 }
 
 .detailPoster {
-    background: #000;
+    background-repeat: no-repeat;
     height: 16em;
+    background-size: cover;
 }
 
 .productColors {
