--- a/src/views/Schedule.scss
+++ b/src/views/Schedule.scss
@@ -87,11 +87,11 @@
                 display: flex;
                 align-items: center;
 
-                input, select {
-                    font-size: 1.1em;
+                select {
+                    font-size: 1em;
                 }
                 textarea, input[type="date"]{
-                    font-size: 1.3em;
+                    font-size: 1.2em;
                 }
 
                 input[type="date"], input[type="text"],select, textarea {
