--- a/src/components/CartCard.scss
+++ b/src/components/CartCard.scss
@@ -16,7 +16,8 @@
         border: 1px solid #f5f5f5;
         width: 6em;
         height: 4em;
-        background: #afafaf;
+        background-repeat: no-repeat;
+        background-size: cover;
         border-radius: 6px;
     }
 
