cart actions added

--- a/src/views/ProductDetail.scss
+++ b/src/views/ProductDetail.scss
@@ -133,6 +133,7 @@
     background-repeat: no-repeat;
     height: 16em;
     background-size: cover;
+    background-position: center;
 }
 
 .productColors {
