--- a/src/components/CartCard.scss
+++ b/src/components/CartCard.scss
@@ -18,6 +18,7 @@
         height: 4em;
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
         border-radius: 6px;
     }
 
