--- a/src/components/ProductCard.scss
+++ b/src/components/ProductCard.scss
@@ -14,6 +14,7 @@
         height: 10em;
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
     }
     .detail {
         background: #ffffff;
