--- a/src/components/StoreCard.scss
+++ b/src/components/StoreCard.scss
@@ -10,6 +10,7 @@
         height: 10em;
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
     }
     .detail {
         background: #ffffff;
