--- a/src/views/ScreenQR.scss
+++ b/src/views/ScreenQR.scss
@@ -1,3 +1,4 @@
+@import "../theme.scss";
 .qrScreenWrapper {
     height: 100vh;
     width: 100vw;
@@ -67,6 +68,7 @@
             flex:1;
             overflow-y: auto;
             padding: 1em;
+            .cartCard > .btn {visibility: hidden;}
         }
 
         .footer {
