missing icons added

--- a/src/components/Toaster.scss
+++ b/src/components/Toaster.scss
@@ -14,6 +14,9 @@
     left: -104vw;
     transition: all 0.3s ease-in-out;
     font-weight: 600;
+    svg {
+        margin-right: 0.5em;
+    }
     &.open {
         left: 0;
     }
