--- a/src/components/GoogleMap.scss
+++ b/src/components/GoogleMap.scss
@@ -1,2 +1,14 @@
 @import "../theme.scss";
 
+.mapMarker{
+    display: flex;
+    width: auto;
+    white-space: nowrap;
+    font-size: 1.4em;
+    align-items: center;
+    color: #ffffff;
+    span {
+        color: $primaryColor;
+        margin-right: 0.3em;
+    }
+}
