--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -42,6 +42,9 @@
             color: $primaryColor;
             border-bottom: 2px solid $primaryColor;
         }
+        &.disabled-link {
+            pointer-events: none;
+        }
     }
 }
 
