--- a/src/views/Catalogue.scss
+++ b/src/views/Catalogue.scss
@@ -88,4 +88,11 @@
             left: 1.4em;
         }
     }
+    .mapWrapper {
+        background-image: url("../image/map.jpg");
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 89%;
+    }
 }
